# platform.build.bazel_common_rules

docs/: docs.bzl  index.html  insert_resource.py
exec/: BUILD  embedded_exec.bzl  exec.bzl
exec/impl/: embedded_exec.bzl
exec/tests/: BUILD  exec_test.py
rules/remote_device/: BUILD.bazel
rules/remote_device/device/: create_cuttlefish.sh.template  cuttlefish_device.bzl  device_environment.bzl  single_local_device.bzl
rules/remote_device/downloader/: BUILD.bazel  download_cvd_artifact.bzl  download_cvd_build.sh.template
test_mapping/: BUILD  test_mapping.bzl  test_mapping.sh
test_mappings/: test_mappings.bzl  test_mappings.sh
